# twinmodules

./: README.md  pyproject.toml  requirements.txt
docs/: conf.py  conf.py.bak  modules.rst  modules.rst.bak  requirements.txt
docs/AWSModules/: AWSBatch.rst  AWS_ECR.rst  AWS_EKS.rst  AWS_S3.rst  AWS_SQS.rst  AWS_sitewise.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree
docs/_build/doctrees/AWSModules/: AWSBatch.doctree  AWS_ECR.doctree  AWS_EKS.doctree  AWS_IAM.doctree  AWS_S3.doctree  AWS_SQS.doctree  AWS_secrets.doctree  AWS_sitewise.doctree  AWS_timestream.doctree
docs/_build/doctrees/core/: components.doctree  sql_databases.doctree  util.doctree
docs/_build/html/: genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/AWSModules/: AWSBatch.html  AWS_ECR.html  AWS_EKS.html  AWS_IAM.html  AWS_S3.html  AWS_SQS.html  AWS_secrets.html  AWS_sitewise.html  AWS_timestream.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/AWSModules/: AWS_IAM.rst.txt  AWS_secrets.rst.txt  AWS_timestream.rst.txt
docs/_build/html/_sources/core/: sql_databases.rst.txt
docs/_build/html/core/: components.html  sql_databases.html  util.html
twinmodules/: tfcli.py
twinmodules/AWSModules/: AWSBatch.py  AWS_ECR.py  AWS_IAM.py  AWS_S3.py  AWS_SQS.py  AWS_secrets.py  AWS_sitewise.py  AWS_timestream.py
twinmodules/core/: components.py  sql_databases.py  util.py
