[tool.poetry]
name = "twinmodules"
version = "0.1.0"
description = "\"Commonly used modules for creating L3/L4 digital twins including cloud interaction.  Part of the TwinFlow suite. \""
authors = ["AWS AC Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
awswrangler="2.20.1"
boto3="^1.26.120"
botocore="^1.29.120"
docker="^6.0.1"
joblib="^1.2.0"
#kfp="1.8.19"
#kfp_pipeline_spec="0.1.16"
#kubernetes="12.0.1"
#numpy="1.23.4"
pandas="^1.5.1"
requests="^2.28.2"
tqdm="^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



