[tool.poetry]
name = "twinmodules"
version = "0.2.1"
description = "\"Commonly used modules for creating L3/L4 digital twins including cloud interaction.  Part of the TwinFlow suite. \""
authors = ["AWS AC Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
awswrangler="^3.4.1"
boto3="^1.26.120"
botocore="^1.29.120"
docker="^6.0.1"
joblib="^1.2.0"
numpy="1.26.1"
pandas="^1.5.1"
requests="^2.28.2"
tqdm="^4.65.0"
fmpy="^0.3.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



