[tool.poetry]
name = "twinmodules"
version = "0.3.0"
description = "\"Commonly used modules for creating L3/L4 digital twins including cloud interaction.  Part of the TwinFlow suite. \""
authors = ["AWS AC Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
awswrangler="^3.4.1"
boto3="^1.26.120"
botocore="^1.29.120"
docker="^6.0.1"
joblib="^1.2.0"
numpy="1.26.1"
requests="^2.28.2"
tqdm="^4.65.0"
fmpy="^0.3.18"
pymysql="^1.1.0"
pandas="^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



